# proxima

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  hnsw.h
bench/: bench.cpp
benchmarks/: bench.cpp  bench.py  compare.py  comparison.csv  cpp_results.csv  plot.py  python_results.csv  requirements.txt
benchmarks/results/: comparison.csv  cpp_results.csv  cpp_scalar_fix_DIM.csv  cpp_scalar_fix_K.csv  cpp_scalar_fix_N.csv  cpp_simd_fix_DIM.csv  cpp_simd_fix_K.csv  cpp_simd_fix_N.csv  python_fix_DIM.csv  python_fix_K.csv  python_fix_N.csv  python_results.csv
benchmarks/results/16-03-2026-22-32/: comparison.csv  cpp_results.csv  cpp_scalar_fix_DIM.csv  cpp_scalar_fix_K.csv  cpp_scalar_fix_N.csv  cpp_simd_fix_DIM.csv  cpp_simd_fix_K.csv  cpp_simd_fix_N.csv  python_fix_DIM.csv  python_fix_K.csv  python_fix_N.csv  python_results.csv  report.md
python/: bench.py  benchmark_hnswlib.py
results/: cpp_results.csv  python_results.csv
scripts/: setup.sh
src/: hnsw.cpp  hnsw.h  main.cpp  scratchpad.cpp
tests/: test_hnsw.cpp  test_parallel.cpp
